--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ h2 {
     text-align: center;
     margin: 10px;
 }
-
+ /*a*/
 .number {
     font-size: 4rem; /* Ajuste o tamanho da fonte conforme necessário */
     font-weight: bold;
