--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,67 @@
-
 body {
-    margin: 0;
-    padding: 0;
+    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    margin: 0;
+    background-color: #f4f4f4;
 }
-.titulo {
-    text-align: center;
-    max-width: 800px; 
-    font-family: 'Montserrat', sans-serif; 
-    color: #333;
+
+
+img {
+    width: 1900%;
+    height: 600px;
+    object-fit: cover;
+    border-radius: 10px;
+    
+}
+
+.carrossel {
+    width: 200%;
+    /* Altera para ocupar toda a largura da página */
+    max-width: 1900px;
+    /* Limita a largura máxima se desejado */
+    position: relative;
+    overflow: hidden;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+   
+}
+
+.carrossel-inner {
+    display: flex;
+    transition: transform 0.5s ease;
+
+}
+
+.carrossel-item {
+    min-width: 1900;
+    box-sizing: border-box;
+    margin: 50px;
+}
+
+.carrossel-item img {
+    width: 300px;
+    border-radius: 10px;
+}
+
+button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.7);
+    border: none;
+    padding: 10px;
+    cursor: pointer;
     font-size: 24px;
-    line-height: 1.5; 
-    margin: 100;
-  }
+    border-radius: 5px;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
+}
