--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,31 @@
 body {
     font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
     background-color: #f4f4f4;
 }
 
-
-img {
-    width: 1900%;
-    height: 600px;
-    object-fit: cover;
-    border-radius: 10px;
-    
-}
-
 .carrossel {
-    width: 200%;
-    /* Altera para ocupar toda a largura da página */
-    max-width: 1900px;
-    /* Limita a largura máxima se desejado */
+    width: 1920px; /* Largura fixa de 1920px */
     position: relative;
     overflow: hidden;
     border: 2px solid #ccc;
     border-radius: 10px;
-   
+    margin: auto; /* Centraliza o carrossel na página */
 }
 
 .carrossel-inner {
     display: flex;
     transition: transform 0.5s ease;
-
 }
 
 .carrossel-item {
-    min-width: 1900;
+    min-width: 1920px; /* Largura de cada item igual a do carrossel */
     box-sizing: border-box;
-    margin: 50px;
 }
 
 .carrossel-item img {
-    width: 300px;
+    width: 100%; /* As imagens ocupam toda a largura do item */
+    height: auto; /* Mantém a proporção da imagem */
     border-radius: 10px;
 }
 
