--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,33 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    background-color: #f4f4f4;
-}
-.carrossel {
-    width: 1300px; /* Largura fixa de 1920px */
-    height: 600px; 
-    position: relative;
-    overflow: hidden;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    margin: auto; /* Centraliza o carrossel na página */
+    background-color: #ffffff;
+    color: #000000;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-.carrossel-inner {
-    display: flex;
-    transition: transform 0.5s ease; 
+.dark-mode {
+    background-color: #333333;
+    color: #ffffff;
 }
 
-.carrossel-item {
-    min-width: 1920px;  /*Largura de cada item igual a do carrossel */
-    box-sizing: border-box;
+.container {
+    padding: 20px;
 }
 
-.carrossel-item img {
-    width: 100%; /* As imagens ocupam toda a largura do item */
-    height: auto; /* Mantém a proporção da imagem */
-    border-radius: 10px;
+.controls {
+    margin-top: 20px;
 }
 
-.button1 {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.7);
-    border: none;
+button {
     padding: 10px;
+    margin-right: 10px;
     cursor: pointer;
-    font-size: 24px;
-    border-radius: 5px;
+    border: none;
+    background: none;
 }
 
-.prev {
-    left: 10px;
-}
-
-.next {
-    right: 10px;
+button img {
+    width: 20px; /* Ajuste o tamanho da imagem conforme necessário */
+    height: 20px;
+    vertical-align: middle;
 }
